--- a/pages/index.html
+++ b/pages/index.html
@@ -4,25 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment | answer</title>
+    <title>Assignment | answer corp.</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
   </head>
   <body>
-    <div class="nav p-4 flex-column">
-      <div class="container-fluid">
-        <a href="#" class="navbar-brand"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week5/logo-ANSWER.svg" alt="logo"></a>
-        <ul class="function-list navbar-nav list-unstyled">
-          <li class="nav-item"><a href="#" class="nav-link link-dark d-flex"><span class="material-icons me-3">assessment</span>Dashboard</a></li>
-          <li class="nav-item"><a href="#" class="nav-link link-dark d-flex"><span class="material-icons me-3">question_answer</span>Question</a></li>
-          <li class="nav-item"><a href="#" class="nav-link link-dark d-flex"><span class="material-icons me-3">assignment</span>Assignment</a></li>
-          <li class="nav-item"><a href="#" class="nav-link link-dark d-flex"><span class="material-icons me-3">video_library</span>Course</a></li>
-          <li class="nav-item"><a href="#" class="nav-link link-success d-flex"><span class="material-icons me-3">supervisor_account</span>Admin</a></li>
-          <li class="nav-item"><a href="#" class="nav-link link-dark d-flex"><span class="material-icons me-3">settings</span>Settings</a></li>
-        </ul>
+    <!-- nav block == left -->
+    <nav class="nav flex-column bg-light pt-3 pb-3">
+      <div class="type-links fw-bold">
+        <!-- brand pic-->
+        <a href="#" class="navbar-brand nav-link"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week5/logo-ANSWER.svg" alt="logo"></a>
+        <!-- other links -->
+        <a href="#" class="nav-link link-dark d-flex"><span class="material-icons me-3">assessment</span>Dashboard</a>
+        <a href="#" class="nav-link link-dark d-flex"><span class="material-icons me-3">question_answer</span>Question</a>
+        <a href="#" class="nav-link link-dark d-flex"><span class="material-icons me-3">assignment</span>Assignment</a>
+        <a href="#" class="nav-link link-dark d-flex"><span class="material-icons me-3">video_library</span>Course</a>
+        <a href="#" class="nav-link link-success d-flex active"><span class="material-icons me-3">supervisor_account</span>Admin</a>
+        <a href="#" class="nav-link link-dark d-flex"><span class="material-icons me-3">settings</span>Settings</a>
       </div>
-      
-    </div>
+      <!-- bottom user info -->
+      <div class="userFile mt-auto d-flex align-items-center pl-32 pb-3">
+        <div class="flex-shrink-0">
+          <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week5/andychen.jpeg" alt="user-photo" class="rounded-circle">
+        </div>
+        <div class="ps-3">
+          <p class="fw-bold mb-0">Andy Chen</p>
+          <p class="text-secondary mb-0 secondary-text">andy0401@mail.com</p>
+        </div>
+      </div>
+    </nav>
+    <!-- main content == right -->
     <div class="main">
       Content
     </div>
