--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Admin | answer corp.</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
-    <script type="module" crossorigin src="/html-week5-BackendSystem/assets/main-265ebcb3.js"></script>
-    <link rel="stylesheet" href="/html-week5-BackendSystem/assets/main-a6567473.css">
+    <script type="module" crossorigin src="/html-week5-BackendSystem/assets/main-7beb7833.js"></script>
+    <link rel="stylesheet" href="/html-week5-BackendSystem/assets/main-058a9539.css">
   </head>
   <body>
     <!-- nav block == left -->
@@ -52,10 +52,10 @@
           <a class="link-dark" href="#"><span class="material-icons">notifications_active</span></a>
         </nav>
         <!-- main table -->
-        <table class="table table-hover">
+        <table class="table table-hover mb-5">
           <thead>
             <tr>
-              <th scope="col">ID</th>
+              <th scope="col d-flex">ID <a href="#"><span class="material-icons link-success">arrow_downward</span></a></th>
               <th scope="col">Name</th>
               <th scope="col">Email</th>
               <th scope="col">Verified</th>
@@ -136,23 +136,25 @@
           </tbody>
         </table>
         <!-- 分頁按鈕 -->
-        <nav aria-label="Page navigation example">
-          <ul class="pagination">
-            <li class="page-item">
-              <a class="page-link" href="#" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-              </a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-              <a class="page-link" href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
+        <div class="navbar-page d-flex justify-content-end">
+          <nav aria-label="Page navigation example border border-success">
+            <ul class="pagination">
+              <li class="page-item border">
+                <a class="page-link border-success border-2 link-success" href="#" aria-label="Previous">
+                  <span class="material-icons">chevron_left</span>
+                </a>
+              </li>
+              <li class="page-item"><a class="page-link border border-success border-2 link-dark" href="#">1</a></li>
+              <li class="page-item"><a class="page-link border border-success border-2 link-dark" href="#">2</a></li>
+              <li class="page-item"><a class="page-link border border-success border-2 link-dark" href="#">3</a></li>
+              <li class="page-item">
+                <a class="page-link border border-success border-2 link-success" href="#" aria-label="Next">
+                  <span class="material-icons">chevron_right</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </div>
 
